react + spring boot single instance